--- a/popup.html
+++ b/popup.html
@@ -23,9 +23,9 @@
         font-family: "Open Sans", sans-serif;
         font-size: 14px;
         margin: 0;
-        min-height: 180px;
+        min-height: 200px;
         padding: 0;
-        width: 384px;
+        width: 400px;
       }
 
       h1 {
@@ -45,7 +45,12 @@
 
       img {
         width: 400px;
+        
+       
       }
+      .f2{
+          height: 250px;
+        }
       .logo-icon{
           width: 30px;
         }
@@ -133,6 +138,9 @@
           <img src="images/hehe/7.png" alt="">
         </div>
         <div class="flex">
+          <img src="images/hehe/01.png" alt="">
+        </div>
+        <div class="flex">
           <img src="images/hehe/8.png" alt="">
         </div>
         <div class="flex">
@@ -152,6 +160,9 @@
         </div>
         <div class="flex">
           <img src="images/hehe/14.png" alt="">
+        </div>
+        <div class="flex">
+          <img class="f2" src="images/hehe/02.png" alt="">
         </div>
         <div class="flex">
           <img src="images/hehe/15.png" alt="">
